feat!: support Bedework 5
Every Bedework measurement we had came from a 2018 quickstart-3.10.3
image, while upstream is alive and at 5.0.  That profile is now
`bedework_3_10_3`, a breaking rename: `features: bedework` raises a
ValueError naming both profiles.  The `bedework` test server is now a
locally built 5.0.0 image, installed from upstream's galleon feature
pack with three upstream startup bugs patched at build time; the 2018
image moved to bedework3.  The new `bedework_5_0_0` profile comes from
several caldav-server-tester runs: writes are asynchronous, a client
cannot create a collection that holds tasks (analysis upstream in
https://github.com/Bedework/bedework/issues/5), text search matches
nothing, an expanded search repeats the href per instance, and a VEVENT
without SUMMARY is refused.  Task and journal storage are graded
unknown, and tests skip where no task calendar can be had.

Prompt: The bedework docker image we're using is 8 years old - but bedework seems to be a an active and alive project. (sic)
Followup-Prompt: A cheap "fix" would be to redefine "bedework" to "bedework_3_10".  Then at least the compatibility_hints is not giving misinformation.
Followup-Prompt: ok [approving the plan: version-stamp to the real 3.10.3, add a rename map rather than a bare rename, and document the provenance]
Followup-Prompt: like with ox, it seems like we need to build our own docker-image for newer versions of bedework.  Try to build a container based on the main branch.  The old bedework docker image should be remaned (sic) bedework3. [approved to go for the released 5.0.0 feature pack rather than "main branch"]
Followup-Prompt: New bedework5 container should be running and working now.  Please probe it and populate the new bedework profile in ~/caldav/compatibility_hints.py
Followup-Prompt: (comment from the review process) s/four/several/ and s/two/several/ and all is good. [on the message saying four runs and the profile comment saying two]
Followup-Prompt: `